    maven/gradle dependency graphhopper is now splitted into graphhopper-core and graphhopper-reader-osm, i.e. if you previouls depend on 'graphhopper' artificat you should now use graphhopper-reader-osm except environments like Android where you just load the graph and do no import
    use GraphHopperOSM as base class instead of GraphHopper
    OSM reader separated from core
0.7        
    added snapped points to output JSON for every path
    the foot routing is now much smoother and only considers safe paths, to use beautiful roads (i.e. prefer hiking routes etc) use the new 'hike' profiles, see #633
    vehicle constants have moved to FlagEncoderFactory
    several constants changed to under score notation see #719 with a few breaking changes, e.g. use lower case names for flag encoders or jsonp_allowed instead of the jsonpAllowed annotation
    moving all string parameter constants into the Parameters class
    no more acceptedRailways set see #662 for more information
    web API: content type of gpx export is now application/gpx+xml if not explicitely specified
    use prepare.ch.weightings instead of prepare.chWeighting e.g. for disabling CH use prepare.ch.weightings=no
    GraphHopper class is refactored regarding RoutingAlgorithmFactory in order to fix problem when integrating flexibility routing, most of the CH related stuff is moved into CHAlgoFactoryDecorator, several methods are deprecated to use the methods of the decorator, see #631
    WeightingMap is now named HintsMap
    use the correct graphHopperFolder as no automatic fallback to 'folder-gh' is happening anymore, see #704
    refactored FlagEncoder.handleFerryWay to getFerrySpeed to make it possible to fix #665
    removed setWeightLimit as too unspecific for arbitrary weights, use setMaxVisitedNodes instead
    missing renames for Path.setEdgeEntry -> setSPTEntry and AbstractAlgorithm.createEdgeEntry -> createSPTEntry

0.6
    removed methods deprecated in 0.4 and 0.5